--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "konva": "^9.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-konva": "^18.2.10",
     "use-image": "^1.1.1"
   },
