--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-konva": "^18.2.10",
+    "react-select": "^5.8.0",
     "use-image": "^1.1.1"
   },
   "devDependencies": {
